--- a/src/index.html
+++ b/src/index.html
@@ -10,9 +10,7 @@
   <body>
     <!-- <load src="./partials/header.html" icon-path="img/sprite.svg#logo" /> -->
 
-    <main>
-      <!-- <load src="./partials/vite-promo.html" /> -->
-    </main>
+    <main></main>
 
     <script type="module" src="main.js"></script>
   </body>
