--- a/src/index.html
+++ b/src/index.html
@@ -14,9 +14,11 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <!-- <load src="./partials/header.html" icon-path="img/sprite.svg#logo" /> -->
-
-    <main></main>
+    <main>
+      <load src="./partials/hero.html" />
+      <load src="./partials/cards.html" />
+    </main>
+    <load src="./partials/footer.html" />
 
     <script type="module" src="main.js"></script>
   </body>
