--- a/src/index.html
+++ b/src/index.html
@@ -14,8 +14,8 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
+    <load src="./partials/header.html" />
     <main>
-      <load src="./partials/hero.html" />
       <load src="./partials/cards.html" />
     </main>
     <load src="./partials/footer.html" />
