--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,7 @@
     <load src="./partials/header.html" />
     <main>
       <load src="./partials/cards.html" />
+      <load src="./partials/pagination.html" />
     </main>
     <load src="./partials/footer.html" />
 
