--- a/src/index.html
+++ b/src/index.html
@@ -14,12 +14,13 @@
 </head>
 
 <body>
+  <load src="./partials/modal.html" />
   <load src="./partials/header.html" />
   <main>
     <load src="./partials/cards.html" />
   </main>
+  <load src="./partials/pagination.html" />
   <load src="./partials/footer.html" />
-  <load src="./partials/modal.html" />
 
   <script type="module" src="main.js"></script>
 </body>
