--- a/src/index.html
+++ b/src/index.html
@@ -17,10 +17,12 @@
   <load src="./partials/modal.html" />
   <load src="./partials/header.html" />
   <main>
-    <load src="./partials/cards.html" />
+    <div class="bg-box">
+      <load src="./partials/cards.html" />
+      <load src="./partials/pagination.html" />
   </main>
-  <load src="./partials/pagination.html" />
   <load src="./partials/footer.html" />
+  </div>
 
   <script type="module" src="main.js"></script>
 </body>
